print formatting fixes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           +1 (432) 288-2945</span>
         <span>
           <i class="fa fa-envelope descriptionIcon" aria-hidden="true"></i>
-          <a class="hideHref" href="mailto:john.mcalpine@student.nmt.edu">John.McAlpine@student.nmt.edu</a>
+          <a class="hideHref" href="mailto:john.mcalpine@student.nmt.edu">jmcalpin@nmt.edu</a>
         </span>
         <span>
           <i class="fa fa-github descriptionIcon" aria-hidden="true"></i>
@@ -109,7 +109,7 @@
                       <b>Java</b>
                     </div>
                     <div class="lines">
-                      ~5K Lines
+                      ~7K Lines
                     </div>
                   </div>
                 </div>
@@ -120,7 +120,7 @@
                       <b>Go</b>
                     </div>
                     <div class="lines">
-                      ~3K Lines
+                      ~5K Lines
                     </div>
                   </div>
                 </div>
@@ -130,51 +130,57 @@
               <h3>
                 Other Languages
               </h3>
-              <ul class="softTable">
+              Common Lisp, CSS (+SASS), HTML, Python, x86 assembly
+              <!--<ul class="softTable">
                 <li>Common Lisp</li>
                 <li>CSS (+SASS)</li>
                 <li>HTML</li>
-                <li>Perl</li>
                 <li>Python</li>
                 <li>x86 assembly</li>
-              </ul>
+              </ul>-->
             </div>
             <div>
               <h3>Tools</h3>
-              <ul class="softTable">
-                <li>PostgreSQL</li>
-                <li>SQLite</li>
-                <li>NGinx</li>
-                <li>Git</li>
-                <li>GDB</li>
+              AWS, Linux shell (Bash &amp; Fish), GDB, Git, NGinx, PostgreSQL, React Native
+              <!--<ul class="softTable">
                 <li>AWS</li>
-                <li>Bash &amp; Fish shell</li>
-              </ul>
+                <li>Linux shell (Bash &amp; Fish)</li>
+                <li>GDB</li>
+                <li>Git</li>
+                <li>NGinx</li>
+                <li>PostgreSQL</li>
+                <li>React Native</li>
+              </ul>-->
             </div>
             <div>
               <h3>Highlighted Coursework</h3>
               <ul>
                 <li class="leftLine">
                   <h4>Android Development</h4>
-                  Spring/Fall 2015
+                  <h4 class="description">Spring/Fall 2015</h4>
                 </li>
                 <li class="leftLine">
                   <h4>Operating Systems</h4>
-                  Spring 2017
+                  <h4 class="description">Spring 2017</h4>
                 </li>
                 <li class="leftLine">
                   <h4>Secure Systems Administration</h4>
-                  Spring 2017
+                  <h4 class="description">Spring 2017</h4>
                 </li>
                 <li class="leftLine">
-                  <h4>Intro. High Performance Computing</h4>
-                  Fall 2017
+                  <h4>High Performance Computing</h4>
+                  <h4 class="description">Fall 2017</h4>
+                </li>
+                <li class="leftLine">
+                  <h4>Machine Learning</h4>
+                  <h4 class="description">Spring 2018</h4>
                 </li>
               </ul>
             </div>
           </div>
         </div>
       </div>
+      <div class="body-column" style="flex: 1"></div>
       <div class="body-column" style="flex: 11">
         <div class="resume-section">
           <h2>
@@ -185,9 +191,10 @@
             <div>
               <div>
                 <span>CryptoSense</span>
+                <span class="description">July-October 2016</span>
                 <h4 class="description leftLine">
                   <i class="fa fa-user-secret descriptionIcon" aria-hidden="true"></i>
-                  software engineering intern, July-October 2016
+                  software engineering intern
                 </h4>
               </div>
               <ul class="hideOnPrint">
@@ -201,9 +208,10 @@
             <div>
               <div>
                 <span>NMT Computer Science Department</span>
+                <span class="description">June 2015-June 2016</span>
                 <h4 class="description leftLine">
                   <i class="fa fa-book descriptionIcon" aria-hidden="true"></i>
-                  grader and tutor, June 2015-June 2016
+                  grader and tutor
                 </h4>
               </div>
               <ul class="hideOnPrint">
@@ -213,12 +221,13 @@
                 </li>
               </ul>
             </div>
-            <div>
+            <div class="hideOnPrint">
               <div>
                 <span>NMT Computer Science LLC</span>
+                <span class="description">August 2014-May 2015</span>
                 <h4 class="description leftLine">
                   <i class="fa fa-flask descriptionIcon" aria-hidden="true"></i>
-                  LLC research project, August 2014-May 2015
+                  LLC research project
                 </h4>
               </div>
               <ul class="hideOnPrint">
@@ -231,9 +240,10 @@
             <div>
               <div>
                 <span>University of North Texas Machine Learning Lab</span>
+                <span class="description">October 2014-June 2015</span>
                 <h4 class="description leftLine">
                   <i class="fa fa-flask descriptionIcon" aria-hidden="true"></i>
-                  research assistant, October 2014-June 2015
+                  research assistant
                 </h4>
               </div>
               <ul class="hideOnPrint">
@@ -245,9 +255,10 @@
             <div>
               <div>
                 <span>Game and Learn</span>
+                <span class="description">March 2014-Ongoing</span>
                 <h4 class="description leftLine">
                   <i class="fa fa-heart descriptionIcon" aria-hidden="true"></i>
-                  co-founder, head of research and development, March 2014-Ongoing
+                  co-founder, head of research and development
                 </h4>
               </div>
               <ul class="hideOnPrint">
@@ -257,12 +268,13 @@
                 </li>
               </ul>
             </div>
-            <div>
+            <div class="hideOnPrint">
               <div>
                 <span>Midland Senior High School FTC Robotics Program</span>
+                <span class="description">September 2014-ongoing</span>
                 <h4 class="description leftLine">
                   <i class="fa fa-graduation-cap descriptionIcon" aria-hidden="true"></i>
-                  programming mentor, September 2014-ongoing
+                  programming mentor
                 </h4>
               </div>
               <ul class="hideOnPrint">
@@ -363,7 +375,7 @@
             <div>
               <div>
                 <a href="github.com/chrismamo1/ducklet">Ducklet</a>
-                <h4 class="description">lightweight HTTP server</h4>
+                <h4 class="description">lightweight CGI server</h4>
                 <h4 class="tools">
                   <i class="fa fa-code descriptionIcon" aria-hidden="true"></i>
                   C, HTTP, Perl
@@ -387,7 +399,7 @@
               </div>
               <ul class="hideOnPrint">
                 <li class="leftLine">
-                  Integrate a Lisp-like DSL for generating highly performant CUDA
+                  Integrate a Lisp-like DSL for generating high-performance CUDA
                   kernels in OCaml programs.
                 </li>
               </ul>
