update grad date

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <ul>
                 <li class="leftLine">
                   <h4>B.S, Computer Science, Mathematics minor</h4>
-                  expected Fall 2018
+                  expected Fall 2019
                 </li>
               </ul>
             </div>
@@ -109,7 +109,7 @@
                       <b>Java</b>
                     </div>
                     <div class="lines">
-                      ~7K Lines
+                      &gt;10K Lines
                     </div>
                   </div>
                 </div>
