--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
           <div class="itemize">
             <div>
               <div>
-                <a href="github.com/chrismamo1/ocaml-cow">OCaml COW</a>
+                <a href="http://github.com/chrismamo1/ocaml-cow">OCaml COW</a>
                 <h4 class="description">web programming library</h4>
                 <h4 class="tools">
                   <i class="fa fa-code descriptionIcon" aria-hidden="true"></i>
@@ -310,7 +310,7 @@
             </div>
             <div>
               <div>
-                <a href="github.com/chrismamo1/ppx_netblob">PPX Netblob</a>
+                <a href="http://github.com/chrismamo1/ppx_netblob">PPX Netblob</a>
                 <h4 class="description">type-driven web programming</h4>
                 <h4 class="tools">
                   <i class="fa fa-code descriptionIcon" aria-hidden="true"></i>
@@ -326,7 +326,7 @@
             </div>
             <div>
               <div>
-                <a href="bit.ly/2uxkXZR">Sound of Hacking</a>
+                <a href="http://bit.ly/2uxkXZR">Sound of Hacking</a>
                 <h4 class="description">security visualization hack</h4>
                 <h4 class="tools">
                   <i class="fa fa-code descriptionIcon" aria-hidden="true"></i>
@@ -342,7 +342,7 @@
             </div>
             <div>
               <div>
-                <a href="github.com/chrismamo1/reflagvsflag">RE Flag Vs. Flag</a>
+                <a href="http://github.com/chrismamo1/reflagvsflag">RE Flag Vs. Flag</a>
                 <h4 class="description">toy site for ranking flags</h4>
                 <h4 class="tools">
                   <i class="fa fa-code descriptionIcon" aria-hidden="true"></i>
@@ -358,7 +358,7 @@
             </div>
             <div>
               <div>
-                <a href="github.com/michemochi/bitcamp2017">WillThisKill.Me</a>
+                <a href="http://github.com/michemochi/bitcamp2017">WillThisKill.Me</a>
                 <h4 class="description">hackathon project</h4>
                 <h4 class="tools">
                   <i class="fa fa-code descriptionIcon" aria-hidden="true"></i>
@@ -374,7 +374,7 @@
             </div>
             <div>
               <div>
-                <a href="github.com/chrismamo1/ducklet">Ducklet</a>
+                <a href="http://github.com/chrismamo1/ducklet">Ducklet</a>
                 <h4 class="description">lightweight CGI server</h4>
                 <h4 class="tools">
                   <i class="fa fa-code descriptionIcon" aria-hidden="true"></i>
@@ -390,7 +390,7 @@
             </div>
             <div>
               <div>
-                <a href="github.com/chrismamo1/cucaml">CuCAML</a>
+                <a href="http://github.com/chrismamo1/cucaml">CuCAML</a>
                 <h4 class="description">CUDA numeric processing for OCaml</h4>
                 <h4 class="tools">
                   <i class="fa fa-code descriptionIcon" aria-hidden="true"></i>
