--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
               <h3>New Mexico Institute of Mining and Technology</h3>
               <ul>
                 <li class="leftLine">
-                  <h4>B.S, Computer Science, Mathematics minor</h4>
-                  expected Fall 2019
+                  <h4>B.S, Computer Science</h4>
+                  partially completed
                 </li>
               </ul>
             </div>
@@ -188,6 +188,42 @@
             Experience
           </h2>
           <div class="itemize">
+            <div>
+              <div>
+                <span>BTA Oil Services</span>
+                <span class="description">July 2020-present</span>
+                <h4 class="description leftLine">
+                  <i class="fa fa-cogs descriptionIcon" aria-hidden="true"></i>
+                  software engineer
+                </h4>
+              </div>
+              <ul class="hideOnPrint">
+                <li class="leftLine">
+                  Developing and maintaining several critical software systems
+                  to meet the needs of a large business. I work closely with
+                  professionals both within and outside of the software/IT field
+                  in order to identify requirements and improve upon existing
+                  tools.
+                </li>
+              </ul>
+            </div>
+            <div>
+              <div>
+                <span>BeSport</span>
+                <span class="description">February-December 2019</span>
+                <h4 class="description leftLine">
+                  <i class="fa fa-cogs descriptionIcon" aria-hidden="true"></i>
+                  software engineering intern
+                </h4>
+              </div>
+              <ul class="hideOnPrint">
+                <li class="leftLine">
+                  Worked on the full stack of the BeSport app and Ocsigen web/app
+                  development framework, including several critical UI and performance
+                  related features.
+                </li>
+              </ul>
+            </div>
             <div>
               <div>
                 <span>CryptoSense</span>
